--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hostinger: dale vida a tu idea en internet con una web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="icon" href="./pngs/hostinger.png">
 </head>
 <body>
     <header> <!-- HEADER -->
@@ -79,6 +80,39 @@
                 </div>
                 <div class="Hero-right-content">
                     <img src="https://imagedelivery.net/LqiWLm-3MGbYHtFuUbcBtA/5a9a19e7-fef4-4cf6-65b1-01001ef95f00/w=1760,sharpen=1" alt="Imagen-Hero-Hostinger">
+                </div>
+            </div>
+        </section>
+        <section class="Web-migration"> <!-- MIGRACIONES WEB -->
+            <div class="Migration-content">
+                <h2 class="title-medium-m text-center">Migración de sitios web simplificada</h2>
+                <p class="text-medium-m text-center"> ¿Actualmente alojás tu sitio con otro proveedor? Unite a los más de 3 millones de propietarios de webs que accedieron a un hosting rápido, seguro y confiable aquí en Hostinger. Nuestro equipo de expertos se puede encargar de la migración mientras tu sitio permanece en funcionamiento en todo momento. Sí, leíste bien: sin tiempo de inactividad, sin pérdida de datos y sin problemas.</p>
+                <div class="cards-container mt-3">
+                    <article class="content-card">
+                        <div class="content-card__img">
+                            <img src="./pngs/primera foto.png" alt="Icon">
+                        </div>
+                        <h4 class="content-card__subtitle text-subtitle-m">3 simples pasos</h4>
+                        <p class="content-card__description text-medium-m">Solo tenés que elegir tu plan, completar el formulario de solicitud de migración y enviarlo. Eso es todo.</p>
+                    </article>
+                    <article class="content-card">
+                        <div class="content-card__img">
+                            <img src="./pngs/segunda foto.png" alt="Icon">
+                        
+                        </div>
+                        <h4 class="content-card__subtitle text-subtitle-m">Rápido y seguro</h4>
+                        <p class="content-card_description text-medium-m">El 95% de las webs migran en menos de 20 minutos. El 5% restante, más rápido que el promedio del sector ¡Y tu sitio web permanece activo todo el tiempo!</p>
+                    </article>
+                    <article class="content-card">
+                        <div class="content-card__img">
+                            <img src="./pngs/tercera foto.png" alt="Icon">
+                        </div>
+                        <h4 class="content-card__subtitle text-subtitle-m">Gratis</h4>
+                        <p class="content-card_description text-medium-m">No importa si tenés una web o 100, migrarlas a Hostinger es gratis con todos nuestros planes.</p>
+                    </article>
+                </div>
+                <div>
+                    <a href="" class="btn-secondary">Empezar</a>
                 </div>
             </div>
         </section>
